fix not showing private wikis

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,6 +4,10 @@
   margin-top: 9px;
 }
 
+.alert {
+  margin-top: 5px;
+}
+
 .nav {
   margin-top: 5px;
 }
